fixed clipping bugs caused by features section

--- a/frontend/app/tiptap.css
+++ b/frontend/app/tiptap.css
@@ -22,6 +22,7 @@
   h2 {
     margin-top: 3.5rem;
     margin-bottom: 1.5rem;
+    font-weight: 500;
   }
 
   h1 {
@@ -34,6 +35,7 @@
 
   h3 {
     font-size: 1.1rem;
+    font-weight: 500;
   }
 
   h4,
